@@ -81,6 +81,13 @@ double GWEN_Time_Diff(GWEN_TIME *t1, GWEN_TIME *t0){
 
 
 
+double GWEN_Time_Milliseconds(GWEN_TIME *t){
+  assert(t);
+  return (double)((t->sec*1000)+(t->usec/1000));
+}
+
+
+
 GWEN_TYPE_UINT32 GWEN_Time_Seconds(GWEN_TIME *t){
   assert(t);
   return t->sec;
